# arecibo

./: .clippy.toml  .gitignore  .lycheeignore  Cargo.toml  LICENSE  README.md  ThirdPartyNotices.txt  _typos.toml  build.rs  compressed-snark-zeromorph.json  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config  config.toml
.github/: PERF_REGRESSION.md  SOLIDITY_COMPAT_ISSUE.md  dependabot.yml  tables.toml
.github/templates/: UNUSED_DEPS_ISSSUE.md  VERSION_CHECK.md
.github/workflows/: bench-pr-comment.yml  bench_pr_comment.yml  docs.yml  gpu-bench.yml  gpu-ci.yml  nightly.yml  repo-sync.yml  rust.yml  solidity.yml  upstream_update.yml
arecibo_cache_test/commitment_keys/: bn256
benches/: bench.env  compressed-snark-supernova.rs  compressed-snark.rs  compute-digest.rs  justfile  pcs.rs  recursive-snark-supernova.rs  recursive-snark.rs  sha256.rs  supernova-ci.rs
benches/common/: mod.rs
benches/common/supernova/: bench.rs  mod.rs  targets.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/arecibo/: all.html  fn.circuit_digest.html  index.html  macro.impl_traits!.html  macro.impl_traits.html  macro.zip_with!.html  macro.zip_with.html  macro.zip_with_for_each!.html  macro.zip_with_for_each.html  sidebar-items.js  struct.CompressedSNARK.html  struct.ProverKey.html  struct.PublicParams.html  struct.R1CSWithArity.html  struct.RecursiveSNARK.html  struct.ResourceBuffer.html  struct.VerifierKey.html
docs/arecibo/constants/: constant.NUM_HASH_BITS.html  index.html  sidebar-items.js
docs/arecibo/cyclefold/: index.html  sidebar-items.js
docs/arecibo/errors/: enum.NovaError.html  enum.PCSError.html  index.html  sidebar-items.js
docs/arecibo/gadgets/: index.html  sidebar-items.js
docs/arecibo/provider/: index.html  sidebar-items.js  struct.Bn256Engine.html  struct.Bn256EngineIPA.html  struct.Bn256EngineKZG.html  struct.Bn256EngineZM.html  struct.GrumpkinEngine.html  struct.PallasEngine.html  struct.Secp256k1Engine.html  struct.Secq256k1Engine.html  struct.VestaEngine.html
docs/arecibo/r1cs/: fn.commitment_key.html  fn.commitment_key_size.html  fn.default_T.html  index.html  sidebar-items.js  struct.R1CSInstance.html  struct.R1CSResult.html  struct.R1CSShape.html  struct.R1CSWitness.html  struct.RelaxedR1CSInstance.html  struct.RelaxedR1CSWitness.html  type.CommitmentKeyHint.html
docs/arecibo/spartan/: fn.powers.html  index.html  sidebar-items.js
docs/arecibo/supernova/: fn.circuit_digest.html  index.html  sidebar-items.js  struct.AuxParams.html  struct.CircuitDigests.html  struct.PublicParams.html  struct.RecursiveSNARK.html  struct.TrivialSecondaryCircuit.html  struct.TrivialTestCircuit.html  trait.NonUniformCircuit.html  trait.StepCircuit.html
docs/arecibo/traits/: index.html  sidebar-items.js  trait.AbsorbInROTrait.html  trait.CurveCycleEquipped.html  trait.Engine.html  trait.Group.html  trait.PrimeFieldExt.html  trait.ROCircuitTrait.html  trait.ROTrait.html  trait.TranscriptEngineTrait.html  trait.TranscriptReprTrait.html  type.Dual.html  type.ROConstants.html  type.ROConstantsCircuit.html
docs/implementors/abomonation/: trait.Abomonation.js
docs/search.desc/arecibo/: arecibo-desc-0-.js
docs/src/arecibo/: circuit.rs.html  constants.rs.html  digest.rs.html  errors.rs.html  lib.rs.html  nifs.rs.html
docs/trait.impl/abomonation/: trait.Abomonation.js
examples/: and.rs  hashchain.rs  minroot.rs  minroot_serde.rs  nivc_dynamic_phi.rs  nivc_no_hint.rs  nivc_nontrivial.rs  nivc_static_phi.rs  nivc_with_hint.rs  sha256-zeromorph.rs
notes/: supernova.md
src/: cache.rs  circuit.rs  constants.rs  data.rs  digest.rs  errors.rs  lib.rs  nifs.rs  parafold.rs  parallel_circuit.rs  parallel_prover.rs  parameters.rs  r1cs.rs  transcript.rs
src/bellpepper/: mod.rs  r1cs.rs  shape_cs.rs  solver.rs  test_shape_cs.rs
src/cyclefold/: circuit.rs  compressed.rs  gadgets.rs  mod.rs  nifs.rs  nova_circuit.rs  snark.rs  util.rs
src/gadgets/: ecc.rs  lookup.rs  mod.rs  r1cs.rs  utils.rs
src/gadgets/nonnative/: bignat.rs  util.rs
src/parafold/: circuit.rs  ecc.rs  hash.rs  io.rs  mod.rs  nifs.rs  nivc.rs  prover.rs  scalar_mul.rs  test.rs  verifier.rs
src/parafold/circuit/: nifs.rs  nivc.rs  scalar_mul.rs  transcript.rs
src/parafold/cycle_fold/: circuit.rs  circuit_alloc.rs  mod.rs  prover.rs
src/parafold/gadgets/: ecc.rs  emulated.rs  mod.rs  primary_commitment.rs  secondary_commitment.rs
src/parafold/nifs/: circuit.rs  circuit_secondary.rs  mod.rs  prover.rs
src/parafold/nifs_primary/: circuit.rs  circuit_alloc.rs  mod.rs  prover.rs
src/parafold/nifs_secondary/: circuit.rs  circuit_alloc.rs  mod.rs  prover.rs
src/parafold/nivc/: circuit.rs  circuit_alloc.rs  hash.rs  mod.rs  prover.rs
src/parafold/prover/: cyclefold.rs
src/parafold/transcript/: circuit.rs  mod.rs  prover.rs
src/provider/: bn256_grumpkin.rs  hyperkzg.rs  hyperkzg_shplonk.rs  hyrax_pcs.rs  ipa_pc.rs  keccak.rs  kzg.rs  kzg_commitment.rs  kzg_impl.rs  mlkzg.rs  mod.rs  msm.rs  non_hiding_kzg.rs  non_hiding_zeromorph.rs  pasta.rs  pedersen.rs  poseidon.rs  secp_secq.rs  shplonk.rs  traits.rs  util.rs  zeromorph.rs  zk_ipa_pc.rs  zk_pedersen.rs
src/provider/pcs/: hyperkzg.rs  ipa_pc.rs  kzg10_utilities.rs  kzg_commitment.rs  mod.rs  non_hiding_zeromorph.rs  pedersen.rs
src/provider/tests/: ipa_pc.rs  mod.rs  poseidon.rs
src/provider/util/: fb_msm.rs  mod.rs  msm.rs
src/r1cs/: mod.rs  sparse.rs  util.rs
src/spartan/: batched.rs  batched_ppsnark.rs  direct.rs  lookup_ppsnark.rs  macros.rs  math.rs  mod.rs  nizk.rs  polynomial.rs  ppsnark.rs  snark.rs  sumcheck.rs  zkppsnark.rs  zksnark.rs  zksumcheck.rs
src/spartan/polys/: eq.rs  eq_poly.rs  identity.rs  masked_eq.rs  mlpoly.rs  mod.rs  multilinear.rs  power.rs  univariate.rs
src/spartan/sumcheck/: engine.rs  mod.rs
src/supernova/: .#mod.rs  Readme.md  circuit.rs  error.rs  mod.rs  snark.rs  test.rs  utils.rs
src/traits/: circuit.rs  circuit_supernova.rs  commitment.rs  evaluation.rs  mod.rs  recursive.rs  snark.rs  zkevaluation.rs  zksnark.rs
(+224 files in other folders)
